--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^3.1.2",
+    "gatsby-plugin-manifest": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
