--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gatsby-plugin-manifest": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
